# django-rest-api

./: CLAUDE.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
products/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_slug.py
templates/: base.html
users/: admin.py  models.py  serializers.py
