[project]
name = "django-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-debug-toolbar>=7.0.0",
    "django-rest-swagger>=2.2.0",
    "django-stubs>=6.0.5",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
]
